--- a/package.json
+++ b/package.json
@@ -3,30 +3,30 @@
   "private": true,
   "version": "1.0.0",
   "engines": {
-    "node": "^10.13 || 12 || 14 || 15",
-    "npm": ">=6"
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "5.11.9",
-    "@testing-library/react": "11.2.5",
-    "@testing-library/user-event": "12.6.2",
-    "chalk": "4.1.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-icons": "4.2.0",
-    "react-loader-spinner": "4.0.0",
-    "react-router-dom": "5.3.0"
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "chalk": "^4.1.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "react-loader-spinner": "^5.4.7",
+    "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
-    "eslint-config-airbnb": "18.2.1",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-prettier": "3.3.1",
-    "husky": "4.3.8",
-    "lint-staged": "10.5.4",
-    "msw": "0.35.0",
-    "npm-run-all": "4.1.5",
-    "prettier": "2.2.1",
-    "react-scripts": "4.0.3"
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.0",
+    "msw": "^2.0.11",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.1.1",
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -67,5 +67,8 @@
       "Firefox ESR",
       "not ie < 11"
     ]
+  },
+  "overrides": {
+    "ajv": "^8.17.1"
   }
 }
