--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "engines": {
-    "node": ">=18.0.0",
+    "node": "18.x",
     "npm": ">=9.0.0"
   },
   "dependencies": {
@@ -27,15 +27,6 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^3.1.1",
     "react-scripts": "^5.0.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix src/",
-    "format": "prettier --write \"./src\"",
-    "run-all": "npm-run-all --parallel test lint:fix"
   },
   "lint-staged": {
     "*.js": [
@@ -68,7 +59,21 @@
       "not ie < 11"
     ]
   },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix src/",
+    "format": "prettier --write \"./src\"",
+    "run-all": "npm-run-all --parallel test lint:fix",
+    "postinstall": "npm dedupe || true"
+  },
   "overrides": {
-    "ajv": "^8.17.1"
-  }
+    "fork-ts-checker-webpack-plugin": {
+      "schema-utils": "^2.7.1",
+      "ajv": "^6.12.6",
+      "ajv-keywords": "^3.5.2"
+    }
+  },
 }
