--- a/package.json
+++ b/package.json
@@ -61,13 +61,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "test": "react-scripts test",
     "lint": "eslint .",
     "lint:fix": "eslint --fix src/",
     "format": "prettier --write \"./src\"",
     "run-all": "npm-run-all --parallel test lint:fix",
-    "postinstall": "npm dedupe || true"
+    "postinstall": "node scripts/fix-nested-deps.js || true"
   },
   "overrides": {
     "fork-ts-checker-webpack-plugin": {
