--- a/package.json
+++ b/package.json
@@ -61,19 +61,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "lint": "eslint .",
     "lint:fix": "eslint --fix src/",
     "format": "prettier --write \"./src\"",
-    "run-all": "npm-run-all --parallel test lint:fix",
-    "postinstall": "node scripts/fix-nested-deps.js || true"
-  },
-  "overrides": {
-    "fork-ts-checker-webpack-plugin": {
-      "schema-utils": "^2.7.1",
-      "ajv": "^6.12.6",
-      "ajv-keywords": "^3.5.2"
-    }
-  },
+    "run-all": "npm-run-all --parallel test lint:fix"
+  }
 }
